# frozenplanetoid

./: README.md  example.yaml  pyproject.toml
.github/workflows/: deploy.yaml
example/: blogs.feeds  funny.feeds  gaming.feeds  generate  news.feeds  noticias.feeds  seres.feeds  tech.feeds
src/frozenplanetoid/: __init__.py  utils.py
